[gd_scene load_steps=13 format=2]

[ext_resource path="res://Assets/Menu/MenuBackground.png" type="Texture" id=1]
[ext_resource path="res://Assets/Fonts/Pixellari.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://Scripts/menu.gd" type="Script" id=4]

[sub_resource type="Environment" id=2]
background_mode = 4
glow_enabled = true
glow_intensity = 0.88
glow_strength = 1.1
glow_blend_mode = 0
glow_bicubic_upscale = true

[sub_resource type="DynamicFont" id=1]
size = 32
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=4]
size = 10
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=5]
size = 14
font_data = ExtResource( 3 )

[sub_resource type="StyleBoxEmpty" id=6]

[sub_resource type="StyleBoxEmpty" id=7]

[sub_resource type="StyleBoxEmpty" id=8]

[sub_resource type="StyleBoxEmpty" id=9]

[sub_resource type="StyleBoxEmpty" id=10]

[node name="menu" type="Node2D"]
script = ExtResource( 4 )

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource( 2 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Label" type="Label" parent="."]
modulate = Color( 1.08, 1.08, 1.08, 1 )
self_modulate = Color( 1, 0, 0, 1 )
margin_left = 38.0
margin_top = 24.0
margin_right = 102.0
margin_bottom = 91.0
custom_fonts/font = SubResource( 1 )
text = "neon
"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label4" type="Label" parent="."]
modulate = Color( 1.08, 1.08, 1.08, 1 )
self_modulate = Color( 1, 0, 0, 1 )
margin_left = 42.0
margin_top = 14.0
margin_right = 98.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 1 )
text = "
rain"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HighScoreLabel" type="Label" parent="."]
modulate = Color( 1.4, 1.4, 1.4, 1 )
self_modulate = Color( 0, 0.827451, 0.827451, 1 )
margin_left = 64.0
margin_top = 160.0
margin_right = 70.0
margin_bottom = 171.0
grow_horizontal = 2
grow_vertical = 2
custom_fonts/font = SubResource( 4 )
text = "0"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayButton" type="Button" parent="."]
modulate = Color( 1.3, 1.3, 1.3, 1 )
margin_left = 40.0
margin_top = 116.0
margin_right = 96.0
margin_bottom = 136.0
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LeaderboardButton" type="Button" parent="."]
modulate = Color( 1.3, 1.3, 1.3, 1 )
margin_left = 30.0
margin_top = 135.0
margin_right = 107.0
margin_bottom = 155.0
custom_fonts/font = SubResource( 5 )
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/disabled = SubResource( 9 )
custom_styles/normal = SubResource( 10 )
text = "leaderboard"
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="LeaderboardButton" to="." method="_on_LeaderboardButton_pressed"]
